# home_monitoring_system_camera

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  camera_handler.c  camera_handler.h  camera_pins.h  camera_utilities.c  camera_utilities.h  idf_component.yml  main.c  mdns_handler.c  udp_streamer_handler.c  udp_streamer_handler.h  udp_streamer_handler_controler.c  udp_streamer_handler_controler.h  udp_streamer_handler_sender.c  udp_streamer_handler_sender.h  udp_streamer_handler_types.h  udps_handler.c  udps_handler.h  wifi_handler.c
